objects/Hospital__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>chiefOfMedicine__c</fullName>
        <label>chiefOfMedicine</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>faxNumber1__c</fullName>
        <label>faxNumber1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>faxNumber2__c</fullName>
        <label>faxNumber2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>gpsAddress__c</fullName>
        <label>gpsAddress</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>helicopterAddress__c</fullName>
        <label>helicopterAddress</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>phoneNumber1__c</fullName>
        <label>phoneNumber1</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phoneNumber2__c</fullName>
        <label>phoneNumber2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>postalCode__c</fullName>
        <label>postalCode</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesRep__c</fullName>
        <label>salesRep</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>streetNumber__c</fullName>
        <label>streetNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>teachingHospital__c</fullName>
        <defaultValue>true</defaultValue>
        <label>teachingHospital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>town__c</fullName>
        <label>town</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Hospital</label>
    <nameField>
        <label>Hospital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>